# TeachingLearning

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  main.py  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/workflows/: ci.yml
app/: embeddings.py  graph.py  ingest.py  layout.py  llm.py  paths.py  predict.py  rag.py  reason.py  storage.py  views.py  workspace.py
tests/: test_core.py  test_rag.py  test_workspace_ingest.py
ui/: bridge.py  index.html  main.js
