[project]
name = "teachinglearning"
version = "0.1.0"
description = "Desktop app for mapping your study of STEM topics as a 3D knowledge graph."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "instructor>=1.15.4",
    "llvmlite>=0.44",
    "networkx>=3.6.1",
    "numba>=0.61",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "openai>=2.44.0",
    "platformdirs>=4.0",
    "pydantic>=2.13.4",
    # PyGObject is the GTK/WebKit2GTK binding pywebview needs on Linux only.
    # macOS uses Cocoa WebKit and Windows uses WebView2, neither of which needs
    # it — so scope it to Linux to keep `uv sync` working on those platforms.
    "pygobject>=3.56.3; sys_platform == 'linux'",
    "pygobject>=3.56.3",
    "python-dotenv>=1.2.2",
    "pywebview>=6.2.1",
    "sentence-transformers>=5.6.0",
    "umap-learn>=0.5.12",
    "pypdf>=6.14.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
